--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html> 
 <html lang="en"> 
- 
 <head> 
  <meta charset="UTF-8"> 
  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -8,9 +7,8 @@
  <link rel="stylesheet" href="./style.css"> 
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> 
 </head> 
- 
 <body> 
- 
+ <h1>kaitaloo</h1>
  <form class="form"> 
   <div class="container"> 
    <div class="mt-5 d-flex align-items-center justify-content-center flex-column"> 
