--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head> 
 <body> 
  <h1>kaitaloo</h1>
+ <h2>kaitaloo2</h2>
  <form class="form"> 
   <div class="container"> 
    <div class="mt-5 d-flex align-items-center justify-content-center flex-column"> 
